# juniper-recurrence

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  LICENSE  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-docs.yml  ci-pre-commit.yml  ci-recurrence-app.yml  ci-recurrence-bench.yml  ci-recurrence-client.yml  ci-recurrence-model.yml  pr-base-branch-guard.yml  publish-recurrence-app.yml  publish-recurrence-client.yml  publish-recurrence-model.yml  security-scan.yml
bench/: __init__.py  app_e2e.py  baselines.py  datasets.py  run_benchmark.py  test_app_e2e.py  test_bench_smoke.py  test_evaluate_bands.py  test_run_dataset_contract.py
bench/results/: REPORT.md  equities_seq.json  irregular_sine.json  irregular_sine_noise0.10.json  irregular_sine_noise0.25.json  mackey_glass.json  multi_sine.json  multi_sine_noise0.10.json  multi_sine_noise0.25.json
juniper-recurrence/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
juniper-recurrence-client/: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
juniper-recurrence-client/juniper_recurrence_client/: __init__.py  _version.py  client.py  constants.py  exceptions.py
juniper-recurrence-client/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_errors.py  test_extra.py  test_request_id.py
juniper-recurrence-model/: .coveragerc.torch  CHANGELOG.md  README.md  pyproject.toml
juniper-recurrence-model/juniper_recurrence_model/: __init__.py  _readout_mlp.py  _version.py  data.py  model.py  readouts.py
juniper-recurrence-model/juniper_recurrence_model/models/: __init__.py  lmu_regressor.py
juniper-recurrence-model/juniper_recurrence_model/units/: __init__.py  lmu_varstep.py
juniper-recurrence-model/tests/: test_conformance.py  test_crossval.py  test_lmu_conformance.py  test_lmu_grid_invariance.py  test_lmu_model.py  test_model_ctor_params.py  test_readouts.py  test_readouts_mlp.py  test_sequence_data.py
juniper-recurrence/juniper_recurrence/: __init__.py  _readout.py  _version.py  app.py  data.py  events.py  logging_config.py  main.py  metrics.py  provenance.py  schemas.py  settings.py  state.py
juniper-recurrence/juniper_recurrence/routers/: __init__.py  _common.py  crossval.py  dataset.py  model.py  predict.py  training.py
juniper-recurrence/tests/: conftest.py  test_app_smoke.py  test_auth_posture_boot_check.py  test_cli.py  test_cli_train.py  test_crossval_routes.py  test_data_adapter.py  test_events.py  test_logging.py  test_metrics.py  test_obs04_metrics.py  test_provenance.py  test_readout.py  test_routes.py  test_settings.py
notes/releases/: RELEASE_NOTES_juniper-recurrence-client-v0.1.0.md  RELEASE_NOTES_juniper-recurrence-client-v0.2.0.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.0.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.1.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.2.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.3.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.4.md  RELEASE_NOTES_juniper-recurrence-model-v0.1.5.md  RELEASE_NOTES_juniper-recurrence-v0.1.0.md  RELEASE_NOTES_juniper-recurrence-v0.1.1.md  RELEASE_NOTES_juniper-recurrence-v0.2.0.md
scripts/: check_version_drift.py
