[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-recurrence-client"
dynamic = ["version"]
description = "HTTP client for the juniper-recurrence service (the Δt-native LMU recurrence model + cross-validation API)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "recurrence", "lmu", "http-client", "rest", "time-series", "cross-validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.28.0",
    "urllib3>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.23",
]
# Opt-in: the X-Request-ID propagation + the on_request hook integrate with
# juniper-observability, but the client never requires it (the import is guarded).
observability = [
    "juniper-observability>=0.3.1",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-recurrence"
Repository = "https://github.com/pcalnon/juniper-recurrence"
Issues = "https://github.com/pcalnon/juniper-recurrence/issues"

[tool.setuptools.dynamic]
version = { attr = "juniper_recurrence_client._version.__version__" }

[tool.setuptools.packages.find]
include = ["juniper_recurrence_client*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ecosystem-standard autoload SIGSEGV defense (dash/playwright plugins are not used here).
addopts = ["-ra", "--strict-markers", "--strict-config", "-p", "no:dash", "-p", "no:playwright"]

# Coverage config (audit B3 item 7 / TST-2). Previously the only gate was
# ``--cov-fail-under=90`` baked into ci-recurrence-client.yml — invisible and
# unenforceable in a local ``pytest`` run, and statement-only because
# ``branch = true`` was never set. ``fail_under`` is kept at the CI's 90
# PROVISIONALLY; branch coverage is stricter than the prior statement-only
# measure, so if CI drops below 90 that surfaces real branch-coverage debt to
# tune (do not lower pre-emptively). ``--cov`` is intentionally NOT added to
# addopts so subset runs (``pytest tests/test_foo.py``) still work without a
# coverage gate.
[tool.coverage.run]
source_pkgs = ["juniper_recurrence_client"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# X is the standard ML design-matrix argument name (juniper-model-core's array contract);
# pep8-naming N803's lowercase rule is a false positive on it (mirrors the model package).
"juniper_recurrence_client/client.py" = ["N803"]
