[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-recurrence-model"
dynamic = ["version"]
description = "Δt-native Legendre Memory Unit (Approach-C) and recurrent model core for the juniper-recurrence application"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "recurrence", "lmu", "legendre", "state-space", "time-series", "irregular-dt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# numpy-only: the LMU memory is a fixed linear recurrence (the A/B matrices are
# closed-form and never trained) and the fixed-order regressor's readout is a
# closed-form least-squares solve, so no autodiff framework is required. (A
# torch-backed trained projection read-in / nonlinear readout is a deferred
# increment — the point at which torch would enter.)
dependencies = [
    "numpy>=1.24",
    "juniper-model-core>=0.1.0,<0.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    # The cross-validation second-implementer test (tests/test_crossval.py) drives LMURegressor
    # through juniper_model_core.crossval (model-core 0.2.0); pull the crossval-capable version.
    "juniper-model-core[crossval]>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-recurrence"
Repository = "https://github.com/pcalnon/juniper-recurrence"
Issues = "https://github.com/pcalnon/juniper-recurrence/issues"

[tool.setuptools.dynamic]
version = { attr = "juniper_recurrence_model._version.__version__" }

[tool.setuptools.packages.find]
include = ["juniper_recurrence_model*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config"]

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# A / B / V / Abar / Bbar are the linear-algebra matrix names from the LMU/HiPPO literature;
# X / y / X_val / y_val are juniper-model-core's array-contract names (the standard ML
# design-matrix / target convention). pep8-naming N803/N806 false-positive on these standard
# mathematical / ML conventions, so they are ignored per-file — the names are correct, not renamed.
"juniper_recurrence_model/units/lmu_varstep.py" = ["N806"]
"juniper_recurrence_model/model.py" = ["N803", "N806"]
# M is the LMU memory-block argument (the standard math/ML design-matrix name); N803 false-positives.
"juniper_recurrence_model/readouts.py" = ["N803"]
"tests/test_lmu_grid_invariance.py" = ["N806"]
"tests/test_lmu_model.py" = ["N806"]
"tests/test_readouts.py" = ["N806"]
"juniper_recurrence_model/data.py" = ["N806"]
"tests/test_sequence_data.py" = ["N806"]
"tests/test_crossval.py" = ["N806"]
