[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "juniper-recurrence"
dynamic = ["version"]
description = "FastAPI + CLI service wrapping the Δt-native LMU recurrence model on the juniper-service-core framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paul Calnon" }]
keywords = ["juniper", "recurrence", "lmu", "fastapi", "time-series", "irregular-dt", "model-service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Real runtime deps. All upstreams are published to PyPI (juniper-model-core 0.2.0,
# juniper-service-core 0.1.0, juniper-recurrence-model 0.1.3, juniper-data-client
# 0.4.2), so the app pins them directly — no editable-sibling / cross-repo-clone
# step is required (plan §10 publish-first end-state). The /v1/crossval endpoint pulls
# juniper-model-core's optional [crossval] extra; juniper-recurrence-model>=0.1.3 is the
# release that adds the DP-3 readout spectrum (ridge="gcv"); publish-first: 0.1.3 must
# reach PyPI before this app change is installable.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.2",
    "numpy>=1.24",
    "juniper-service-core>=0.1.0,<0.2.0",
    "juniper-model-core[crossval]>=0.2.0,<0.3.0",
    "juniper-recurrence-model>=0.1.3,<0.2.0",
    "juniper-data-client>=0.4.2,<0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",  # required by fastapi/starlette TestClient
]
# Prometheus /metrics + MetricsAuthMiddleware (design doc
# JUNIPER_RECURRENCE_METRICS_ENDPOINT_DESIGN_2026-06-18.md). The >=0.4.0 floor
# provides set_build_info; app.py guards this import so the app still runs when
# the extra is absent (/metrics is simply not mounted).
observability = [
    # [prometheus] pulls prometheus-client — juniper-observability keeps it optional,
    # so the bare package would ModuleNotFoundError at /metrics scrape time (mirrors
    # juniper-data's observability extra).
    "juniper-observability[prometheus]>=0.4.0",
]
# Benchmark / evaluation harness (the bench/ directory; not part of the published dist).
# juniper-data>=0.8.0 ships the synthetic Δt generators (#187/#188) + scaling meta (#189) and the
# equities `regression_target` option (#195) on PyPI, so the bench installs cleanly from PyPI — no
# editable-sibling / cross-repo-clone step. >=0.8.0 is REQUIRED (not just >=0.7.0): EquitiesParams
# ignores unknown kwargs (pydantic extra='ignore'), so an older pin would silently drop the
# stationary log-return target and re-measure the raw non-stationary close.
bench = [
    "juniper-data>=0.8.0",
]

[project.scripts]
juniper-recurrence = "juniper_recurrence.main:main"

[project.urls]
Homepage = "https://github.com/pcalnon/juniper-recurrence"
Repository = "https://github.com/pcalnon/juniper-recurrence"
Issues = "https://github.com/pcalnon/juniper-recurrence/issues"

[tool.setuptools.dynamic]
version = { attr = "juniper_recurrence._version.__version__" }

[tool.setuptools.packages.find]
include = ["juniper_recurrence*"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Ecosystem-standard autoload SIGSEGV defense (dash/playwright plugins are not used here).
addopts = ["-ra", "-q", "--strict-markers", "--strict-config", "-p", "no:dash", "-p", "no:playwright"]

# Coverage config (audit B3 item 7 / TST-2). Previously the only gate was
# ``--cov-fail-under=90`` baked into ci-recurrence-app.yml — invisible and
# unenforceable in a local ``pytest`` run, and statement-only because
# ``branch = true`` was never set. ``fail_under`` is kept at the CI's 90
# PROVISIONALLY; branch coverage is stricter than the prior statement-only
# measure, so if CI drops below 90 that surfaces real branch-coverage debt to
# tune (do not lower pre-emptively). ``--cov`` is intentionally NOT added to
# addopts so subset runs (``pytest tests/test_foo.py``) still work without a
# coverage gate.
[tool.coverage.run]
source_pkgs = ["juniper_recurrence"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 512
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "N"]

[tool.ruff.lint.per-file-ignores]
# ``X`` is the standard ML design-matrix name (juniper-model-core's array contract);
# pep8-naming N806's lowercase rule is a false positive on it (mirrors the model package).
"tests/conftest.py" = ["N806"]
"tests/test_crossval_routes.py" = ["N806"]
